--- a/app/sass/partials/_footer.scss
+++ b/app/sass/partials/_footer.scss
@@ -1,1 +1,10 @@
 /////FOOTER
+
+//Footer#
+#footer {
+    width: 100%;
+    padding: 100px 0;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url("/dist/img/home-statement.jpg");
+    background-position: center;
+    background-size: cover;
+}
