--- a/app/sass/variable/_variable.scss
+++ b/app/sass/variable/_variable.scss
@@ -1,10 +1,10 @@
 //Variable.scss
 
-$base-color: #fff;
-$primary-color: #111111;
-$secondary-color: #d6c21a;
-$three-color: #636363;
-$four-color: #595959;
+$base_color: #fff;
+$primary_color: #111111;
+$secondary_color: #d6c21a;
+$three_color: #636363;
+$four_color: #595959;
 $family: 'Montserrat';
 $size: 14px;
 
