--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -1,4 +1,4 @@
-//Bu Sass Dosyası Emrah KAHRAMAN tarafından kodlanmıştır.
+//Bu Sass Dosyası Esra ve Emrah  tarafından kodlanmıştır.
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap');
 
@@ -9,30 +9,28 @@
 //Partials
 @import "partials/_header";
 @import "partials/_home";
-@import "partials/_about";
-@import "partials/_services";
-@import "partials/_services-details";
-@import "partials/_projects";
-@import "partials/_projects-details";
-@import "partials/_blog";
-@import "partials/_blog-detail";
-@import "partials/_contact";
 @import "partials/_footer";
 
 * {
     box-sizing: border-box;
 }
 
+
 body {
-    background-color: $base-color;
+    background-color: $base_color;
     width: 100%;
     min-height: 100vh;
     font-size: $size;
     font-family: $family;
-    color: $primary-color;
+    color: $primary_color
 }
 
 .owl-carousel .owl-stage, .owl-carousel.owl-drag .owl-item{
     -ms-touch-action: auto;
     touch-action: auto;
+}
+
+.aligns_item {
+    @include flex;
+    @include align-items(center);
 }
